welcome.lessons.welcome.array.island.Island.scala.error
island:14: error: missing arguments for method premier in class island;
follow this method with `_' if you want to treat it as a partially applied function
		if (premier == -1)
                    ^island:37: error: not found: type x
def deuxieme(tab:Array[Int], Int:x, niv:Int):Int = 
                                 ^island:18: error: missing arguments for method premier in class island;
follow this method with `_' if you want to treat it as a partially applied function
			var de:Int = deuxieme(num, premier, niv);
                                                   ^island:20: error: not found: value x
			return 1 + is(subTab(num, x, y), niv + 1) + is(subTab(num, y + 1, num.length - 1), niv); 
                                                  ^island:39: error: not found: value x
	var i:Int = x;
                    ^